fixing up buttons and layout

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -82,7 +82,7 @@
         </script>
     </head>
     <body>
-        <div id="header">The Map of Life</div>
+        <div id="header"><div id="title">The Map of Life</div></div>
         <div id="container">
             <div id="content_top">An infrastructure for integrating global species distribution knowledge</div>
             <div id="map_canvas"></div> 
