cleaning up buttons and layout

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -88,8 +88,12 @@
             <div id="map_canvas"></div> 
             <div id="content_bottom">
                 <div id="main_links">
-                    <img id="examples" class="main_link" src="/images/examples.png" />
-                    <img id="explore" class="main_link" src="/images/explore.png" />
+                    <a href="javascript::" id="button_link">
+                        <img id="examples" class="main_link" src="/images/examples.png" />
+                    </a>
+                    <a href="javascript::" id="button_link">
+                        <img id="explore" class="main_link" src="/images/explore.png" />
+                    </a>
                 </div>
                 <div id="text_blocks">
                     <div id="block_title">About</div>
