Event bus and RPC proxy support

--- a/app/html/search.html
+++ b/app/html/search.html
@@ -11,7 +11,7 @@
   <body>
     <div id='molapp'>
       <div id='content'>
-        <div id='SearchWidget'>
+        <div id='SearchView'>
           <input type='search' id='searchBox' placeholder='concolor'>
           <button id='searchButton' value="submit" type="submit">Search</button>            
         </div>
