ApiProxy in place

--- a/app/html/search.html
+++ b/app/html/search.html
@@ -14,8 +14,7 @@
         <div id='SearchView'>
           <input type='search' id='searchBox' placeholder='concolor'>
           <button id='searchButton' value="submit" type="submit">Search</button>            
-        </div>
-        <div id='search-results'>
+          <div id='searchResults'></div>
         </div>
       </div>
     </div>
