--- a/app/html/search.html
+++ b/app/html/search.html
@@ -18,6 +18,20 @@
         </div>
       </div>
     </div>
+
+    <script type="text/template" id="foo">
+      {{#items}}
+      <li>{{Name}}</li>
+      <li>{{Author}}</li>
+      <li>{{Taxonomy}}</li>
+      <li>{{Synonyms}}</li>
+      <li>{{Map}}</li>
+      {{/items}}
+    </script>
+
+    <script type="text/template" id="searchResults-template"> 
+      <div class="results"> {{#items}} {{.}} {{/items}} </div>
+    </script> 
     <script type="text/template" id="species-template"> 
       <div class="name">{{name}}</div>
     </script> 
