--- a/app/html/search.html
+++ b/app/html/search.html
@@ -1,53 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>    
-    <script
-       src="https://www.google.com/jsapi">
-    </script>
-    <script 
-       src="https://github.com/douglascrockford/JSON-js/raw/master/json2.js">
-    </script>    
-    <script 
-       src="http://code.jquery.com/jquery-1.5.js">
-    </script>
-    <script 
-       src="http://documentcloud.github.com/underscore/underscore.js">
-    </script>    
-    <script 
-       src="http://documentcloud.github.com/backbone/backbone.js">
-    </script>    
-    <script 
-       src="https://github.com/janl/mustache.js/raw/master/mustache.js">
-    </script>    
-    <script 
-       src="../js/mol.js">
-    </script>
+    <script src="http://www.google.com/jsapi"></script>
+    <script src="https://github.com/douglascrockford/JSON-js/raw/master/json2.js"></script>
+    <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script src="http://documentcloud.github.com/underscore/underscore.js"></script>    
+    <script src="http://documentcloud.github.com/backbone/backbone.js"></script>    
+    <script src="https://github.com/janl/mustache.js/raw/master/mustache.js"></script>    
+    <script src="../js/mol.js"></script>
   </head>
   <body>
     <div id='molapp'>
       <div id='content'>
         <div id='SearchView'>
           <input type='search' id='searchBox' placeholder='concolor'>
-          <button id='searchButton' value="submit" type="submit">Search</button>          <div id='searchResults'></div>
+          <button id='searchButton' value="submit" type="submit">Search</button>          
           <div id='searchTable'></div>
         </div>
       </div>
     </div>
-
-    <script type="text/template" id="foo">
-      {{#items}}
-      <li>{{Name}}</li>
-      <li>{{Author}}</li>
-      <li>{{Taxonomy}}</li>
-      <li>{{Synonyms}}</li>
-      <li>{{Map}}</li>
-      {{/items}}
-    </script>
-
     <script>
       google.load('visualization', '1', {'packages': ['table']});
-      google.setOnLoadCallback(MOL.init);
+      google.setOnLoadCallback(mol.init);
     </script>
-
   </body>  
 </html>
