--- a/app/html/search.html
+++ b/app/html/search.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>    
-    <script src="http://www.google.com/jsapi"></script>
-    <script src="https://github.com/douglascrockford/JSON-js/raw/master/json2.js"></script>
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
-    <script src="http://documentcloud.github.com/underscore/underscore.js"></script>    
-    <script src="http://documentcloud.github.com/backbone/backbone.js"></script>    
-    <script src="https://github.com/janl/mustache.js/raw/master/mustache.js"></script>    
+    <script src="../js/lib/jsapi.js"></script>
+    <script src="../js/lib/json2.js"></script>
+    <script src="../js/lib/jquery-1.5.1.min.js"></script>
+    <script src="../js/lib/underscore-min.js"></script>    
+    <script src="../js/lib/backbone-min.js"></script>    
+    <script src="../js/lib/mustache.js"></script>    
     <script src="../js/mol.js"></script>
+    <meta charset="utf-8" /> 
+    <!-- 
+       * Copyright (c) 2011 Map of Life
+       *
+       * Licensed under the Apache License, Version 2.0 (the "License");
+       * you may not use this file except in compliance with the License.
+       * You may obtain a copy of the License at
+       *
+       *     http://www.apache.org/licenses/LICENSE-2.0
+       *
+       * Unless required by applicable law or agreed to in writing, software
+       * distributed under the License is distributed on an "AS IS" BASIS,
+       * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+       * See the License for the specific language governing permissions and
+       * limitations under the License.
+      --> 
+    <meta name="description" content="Map of Life search interface." /> 
+    <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
   </head>
   <body>
     <div id='molapp'>
