--- a/app/html/search.html
+++ b/app/html/search.html
@@ -26,13 +26,53 @@
       --> 
     <meta name="description" content="Map of Life search interface." /> 
     <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+    <style>
+      #mol {
+        font-family: 'Josefin Sans', arial, serif;
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 400;
+        text-shadow: none;
+        text-decoration: none;
+        text-transform: none;
+        letter-spacing: -0.037em;
+        word-spacing: -0.108em;
+        line-height: 1.17;
+        padding-bottom: 8px;
+      }
+      #searchButton {
+        position: fixed;
+        top: 46px;
+      }
+      #searchBox {
+        width: 300px;
+      }
+      #checkbox {
+        position: fixed;
+        top: 53px;
+        left: 380px;
+      }
+      #checkBox {
+        position: fixed;
+        top: 48px;
+        left: 390px;
+      }
+      #searchTable {
+        padding-top: 10px;
+      }
+    </style>
   </head>
-  <body>
+  <body style="font: 75% Lucida Grande, Trebuchet MS">
     <div id='molapp'>
       <div id='content'>
+        <div id='mol'>Map of Life</div>
         <div id='SearchView'>
           <input type='search' id='searchBox' placeholder='concolor'>
           <button id='searchButton' value="submit" type="submit">Search</button>          
+          <div id="checkBox">
+            <input type='checkbox' id='cb'></input>Species with range maps
+          </div>
           <div id='searchTable'></div>
         </div>
       </div>
