--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -2,14 +2,15 @@
 <html>
   <head>    
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="../js/lib/jsapi.js"></script>
-    <script src="../js/lib/json2.js"></script>
-    <script src="../js/lib/jquery-1.5.1.min.js"></script>
-    <script src="../js/lib/underscore-min.js"></script>    
-    <script src="../js/lib/backbone-min.js"></script>    
-    <script src="../js/lib/mustache.js"></script>    
-    <script src="../js/mol.js"></script>
+    <script src="../../../js/lib/jsapi.js"></script>
+    <script src="../../../js/lib/json2.js"></script>
+    <script src="../../../js/lib/jquery-1.5.1.min.js"></script>
+    <script src="../../../js/lib/underscore-min.js"></script>    
+    <script src="../../../js/lib/backbone-min.js"></script>    
+    <script src="../../../js/lib/mustache.js"></script>    
+    <script src="../../../js/mol.js"></script>
     <meta charset="utf-8" /> 
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
     <!-- 
        * Copyright (c) 2011 Map of Life
        *
@@ -25,9 +26,11 @@
        * See the License for the specific language governing permissions and
        * limitations under the License.
       --> 
-    <meta name="description" content="Map of Life search interface." /> 
+    <meta name="description" content="Map of Life - Range Map." /> 
     <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+    <link href="http://code.google.com/apis/maps/documentation/javascript/examples/standard.css" 
+          rel="stylesheet" type="text/css" /> 
     <style>
       #mol {
         font-family: 'Josefin Sans', arial, serif;
@@ -66,23 +69,11 @@
     </style>
   </head>
   <body style="font: 75% Lucida Grande, Trebuchet MS">
-    <div id="molapp">
-      <div id="content">
-        <div id="mol">Map of Life</div>
-        <div id="SearchView">
-          <input type="search" id="searchBox" placeholder="concolor">
-          <button id="searchButton" value="submit" type="submit">Search</button>          
-          <div id="checkBox">
-            <input type="checkbox" id="cb"></input>
-            <div id="cbtext">Species with range maps</div>
-          </div>
-          <div id="searchTable"></div>
-        </div>
-      </div>
-    </div>
+    <div id="mol">Map of Life</div>
+    <div id="map_canvas" style="height:100%"></div>
     <script>
-      google.load("visualization", "1", {"packages": ["table"]});
-      google.setOnLoadCallback(mol.init);
+      mol.initRangeMap()
+;
     </script>
   </body>  
 </html>
