--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>    
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../../css/layer.widget.css">
+    <link href="http://code.google.com/apis/maps/documentation/javascript/examples/standard.css" 
+          rel="stylesheet" type="text/css" /> 
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="../../../js/lib/jsapi.js"></script>
     <script src="../../../js/lib/json2.js"></script>
@@ -28,10 +32,6 @@
       --> 
     <meta name="description" content="Map of Life - Range Map." /> 
     <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
-    <link href="http://code.google.com/apis/maps/documentation/javascript/examples/standard.css" 
-          rel="stylesheet" type="text/css" /> 
-    <link rel="stylesheet" href="./css/layer.widget.css">
   </head>
   <body style="font: 75% Lucida Grande, Trebuchet MS">
     <div id="mol">Map of Life</div>
