--- a/app/html/search.html
+++ b/app/html/search.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>    
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="./css/layer.widget.css">
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="../js/lib/jsapi.js"></script>
     <script src="../js/lib/json2.js"></script>
@@ -27,43 +29,6 @@
       --> 
     <meta name="description" content="Map of Life search interface." /> 
     <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
-    <style>
-      #mol {
-        font-family: 'Josefin Sans', arial, serif;
-        font-size: 26px;
-        font-style: normal;
-        font-weight: 400;
-        text-shadow: none;
-        text-decoration: none;
-        text-transform: none;
-        letter-spacing: -0.037em;
-        word-spacing: -0.108em;
-        line-height: 1.17;
-        padding-bottom: 8px;
-      }
-      #searchButton {
-        position: fixed;
-        top: 46px;
-      }
-      #searchBox {
-        width: 300px;
-      }
-      #checkBox {
-        cursor: pointer;
-        position: fixed;
-        top: 48px;
-        left: 390px;
-      }
-      #cbtext {
-        position: fixed;
-        top: 51px;
-        left: 410px;
-      }
-      #searchTable {
-        padding-top: 10px;
-      }
-    </style>
   </head>
   <body style="font: 75% Lucida Grande, Trebuchet MS">
     <div id="molapp">
