--- a/app/html/layer.widget.html
+++ b/app/html/layer.widget.html
@@ -15,18 +15,15 @@
     <div id="widget-container">
       <div id="layers">
         <div id="list">
-          <div class="layer list">
+          <div class="layer list" id="MOL_range_artibeus_concolor">
             <input type="radio" name="layer-toggle" value="range" CHECKED>
             <span class="layer source">MOL</span> Artibeus concolor</div>
-          <div class="layer list">
+          <div class="layer list" id="GBIF_points_artibeus_concolor">
             <input type="radio" name="layer-toggle" value="gbif">
             <span class="layer source">GBIF</span> Artibeus concolor</div>
-          <div class="layer list">
+          <div class="layer list" id="LifeMapper_model_artibeus_concolor">
             <input type="radio" name="layer-toggle" value="enm">
             <span class="layer source">LifeMapper</span> Artibeus concolor</div>
-          <div class="layer list">
-            <img src="/static/loading-small.gif" />
-          </div>
           <div class="dialog list" id="add_new_layer_dialog">
             <button id="add_points_button" class="dialog_buttons">Add Points</button>
                 <div id="add_points_dialog" class="dialog_button output">
@@ -45,7 +42,7 @@
             <li class="option list"><a id="add_layer" href="javascript:">Add</a></li>
             <li class="option list"><a href="">Upload</a></li>
             <li class="option list"><a href="">Info</a></li>
-            <li class="option list"><a href="">Trash</a></li>
+            <li class="option list"><a id="delete_layer" href="javascript:">Delete</a></li>
           </ul>
         </div>
       </div>
