got rid of draggable labels

--- a/app/html/layer.widget.html
+++ b/app/html/layer.widget.html
@@ -17,13 +17,13 @@
         <div id="list">
           <div class="layer list" id="MOL_range_artibeus_concolor">
             <input type="radio" name="layer-toggle" value="range" CHECKED>
-            <span class="layer source">MOL</span> Artibeus concolor</div>
+            <span class="source">MOL</span> Artibeus concolor</div>
           <div class="layer list" id="GBIF_points_artibeus_concolor">
             <input type="radio" name="layer-toggle" value="gbif">
-            <span class="layer source">GBIF</span> Artibeus concolor</div>
+            <span class="source">GBIF</span> Artibeus concolor</div>
           <div class="layer list" id="LifeMapper_model_artibeus_concolor">
             <input type="radio" name="layer-toggle" value="enm">
-            <span class="layer source">LifeMapper</span> Artibeus concolor</div>
+            <span class="source">LifeMapper</span> Artibeus concolor</div>
           <div class="dialog list" id="add_new_layer_dialog">
             <button id="add_points_button" class="dialog_buttons">Add Points</button>
                 <div id="add_points_dialog" class="dialog_button output">
