layer stack cleanup

--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -44,8 +44,8 @@
           <div id="menu">
             <ul class="options list">
               <li class="option list" id="add"><a id="add_layer" href="javascript:">Add</a></li>
+              <li class="option list"><a href="javascript:">Info</a></li>
               <li class="option list"><a id="hide" href="">Hide</a></li>
-              <li class="option list"><a id="info" href="">Info</a></li>
               <li class="option list"><a id="delete_layer" href="javascript:">Delete</a></li>
             </ul>
           </div>
