Show/hide layers working via checkbox

--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -45,22 +45,11 @@
             <ul class="options list">
               <li class="option list" id="add"><a id="add_layer" href="javascript:">Add</a></li>
               <li class="option list"><a href="javascript:">Info</a></li>
-              <li class="option list"><a id="hide" href="">Hide</a></li>
+              <li class="option list"><a id="hide" href="javascript:">Hide</a></li>
               <li class="option list"><a id="delete_layer" href="javascript:">Delete</a></li>
             </ul>
           </div>
           <div id="list">
-            <!--
-            <div class="layer list" id="MOL_range_artibeus_concolor">
-              <input type="radio" name="layer-toggle" value="range" CHECKED>
-              <span class="source">MOL</span> Artibeus concolor</div>
-            <div class="layer list" id="GBIF_points_artibeus_concolor">
-              <input type="radio" name="layer-toggle" value="gbif">
-              <span class="source">GBIF</span> Artibeus concolor</div>
-            <div class="layer list" id="LifeMapper_model_artibeus_concolor">
-              <input type="radio" name="layer-toggle" value="enm">
-              <span class="source">LifeMapper</span> Artibeus concolor</div>
-            -->
             <div class="dialog list" id="add_new_layer_dialog">
               <button id="add_points_button" class="dialog_buttons">Add Points</button>
               <div id="add_points_dialog" class="dialog_button output">
