--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -2,9 +2,6 @@
 <html>
   <head>    
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../../../css/layer.widget.css">
-    <link href="http://code.google.com/apis/maps/documentation/javascript/examples/standard.css" 
-          rel="stylesheet" type="text/css" /> 
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="../../../js/lib/jsapi.js"></script>
     <script src="../../../js/lib/json2.js"></script>
@@ -16,6 +13,11 @@
     <script src="../../../js/mol.js"></script>
     <meta charset="utf-8" /> 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
+    <style type="text/css"> 
+      html { height: 100% }
+      body { height: 100%; margin: 0px; padding: 0px }
+      #map { height: 100% }
+    </style> 
     <!-- 
        * Copyright (c) 2011 Map of Life
        *
@@ -33,19 +35,16 @@
       --> 
     <meta name="description" content="Map of Life - Range Map." /> 
     <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
+  </head>
+  <body>
+    <div id="content"></div>
+    <div id="map"></div>
 	<script type="text/javascript">
         var mol;
         $(document).ready(function(){
             var context = $("#content");
             mol = new MOL.Viz(context);
         });
-    </script>
-  </head>
-  <body>
-    <div id="content"></div>
-    <script>
-      google.load("jquery", "1.5.1");
-      google.load("jqueryui", "1.8.10")
     </script>
   </body>  
 </html>
