--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -2,6 +2,7 @@
 <html>
   <head>    
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../../css/layer.widget.css">
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="../../../js/lib/jsapi.js"></script>
     <script src="../../../js/lib/json2.js"></script>
@@ -16,7 +17,8 @@
     <style type="text/css"> 
       html { height: 100% }
       body { height: 100%; margin: 0px; padding: 0px }
-      #map { height: 100% }
+      #map { height: 100%; width: 50%; float: left }
+      #tester { height: 100%; width: 40%; float: right }
     </style> 
     <!-- 
        * Copyright (c) 2011 Map of Life
@@ -39,6 +41,7 @@
   <body>
     <div id="content"></div>
     <div id="map"></div>
+    <div id="tester"></div>
 	<script type="text/javascript">
         var mol;
         $(document).ready(function(){
