--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -45,8 +45,7 @@
 	<script type="text/javascript">
         var mol;
         $(document).ready(function(){
-            var context = $("#content");
-            mol = new MOL.Viz(context);
+            mol = new MOL.Viz("#map");
         });
     </script>
   </body>  
