--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -45,6 +45,7 @@
 	<script type="text/javascript">
         var mol;
         $(document).ready(function(){
+            MOL.init();
             mol = new MOL.Viz("#map");
         });
     </script>
