Collapsing mol.maps and mol.ui

--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -12,12 +12,11 @@
     <script src="../../../js/lib/mustache.js"></script>    
     <script src="../../../js/mol/mol.util.js"></script>
     <script src="../../../js/mol/mol.init.js"></script>
-    <script src="../../../js/mol/mol.ui.LayerStack.js"></script>
+    <script src="../../../js/mol/mol.ui.js"></script>
     <script src="../../../js/mol/mol.engines.js"></script>
-    <script src="../../../js/mol/mol.maps.Layer.js"></script>
+    <script src="../../../js/mol/mol.maps.js"></script>
     <script src="../../../js/mol/mol.api.js"></script>
     <script src="../../../js/mol/mol.event.js"></script>
-    <script src="../../../js/mol/mol.maps.Map.js"></script>
     <meta charset="utf-8" /> 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
     <style type="text/css"> 
