--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -4,6 +4,8 @@
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../../../css/layer.widget.css">
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+    <!-- All this JS will be compiled down to a single source in production -->
     <script src="../../../js/lib/jsapi.js"></script>
     <script src="../../../js/lib/json2.js"></script>
     <script src="../../../js/lib/jquery-1.5.1.min.js"></script>
@@ -17,6 +19,7 @@
     <script src="../../../js/mol/mol.maps.js"></script>
     <script src="../../../js/mol/mol.api.js"></script>
     <script src="../../../js/mol/mol.event.js"></script>
+
     <meta charset="utf-8" /> 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
     <style type="text/css"> 
