--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -9,6 +9,7 @@
     <script src="../../../js/lib/jsapi.js"></script>
     <script src="../../../js/lib/json2.js"></script>
     <script src="../../../js/lib/jquery-1.5.1.min.js"></script>
+    <script src="../../../js/lib/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="../../../js/lib/underscore-min.js"></script>    
     <script src="../../../js/lib/backbone-min.js"></script>    
     <script src="../../../js/lib/mustache.js"></script>    
@@ -25,8 +26,7 @@
     <style type="text/css"> 
       html { height: 100% }
       body { height: 100%; margin: 0px; padding: 0px }
-      #map { height: 100%; width: 50%; float: left }
-      #tester { height: 100%; width: 40%; float: right }
+      #map { height: 100% }
     </style> 
     <!-- 
        * Copyright (c) 2011 Map of Life
