new ui elements

--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -2,7 +2,9 @@
 <html>
   <head>    
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../../css/right-controller.css">
     <link rel="stylesheet" href="../../../css/layer.widget.css">
+    <link rel="stylesheet" href="../../../css/filter.widget.css">
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
     <!-- All this JS will be compiled down to a single source in production -->
