PointsController toggling points

--- a/app/html/range_maps.html
+++ b/app/html/range_maps.html
@@ -20,6 +20,7 @@
     <script src="../../../js/mol/mol.ui.js"></script>
     <script src="../../../js/mol/mol.engines.js"></script>
     <script src="../../../js/mol/mol.maps.js"></script>
+    <script src="../../../js/mol/mol.maps.controllers.js"></script>
     <script src="../../../js/mol/mol.api.js"></script>
     <script src="../../../js/mol/mol.event.js"></script>
 
