--- a/app/html/mol.sandbox.html
+++ b/app/html/mol.sandbox.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
-<head>
+<html>
+  <head>    
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../../../css/info-controller.css">
     <link rel="stylesheet" href="../../../css/right-controller.css">
     <link rel="stylesheet" href="../../../css/layer.widget.css">
     <link rel="stylesheet" href="../../../css/filter.widget.css">
-    <script src="../../../js/lib/jquery-1.5.1.min.js"></script>
-    <script src="../../../js/lib/jquery-ui-1.8.10.custom.min.js"></script>
-    <script src="../../../js/mol/mol.sandbox.js"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+    <!-- All this JS will be compiled down to a single source in production -->
+    <script src="../../../js/lib/jquery-1.5.1.min.js"></script> 
+    <script src="../../../js/lib/jquery-ui-1.8.10.custom.min.js"></script> 
     <script src="../../../js/mol/class.js"></script>
-</head>
-<body>
-</body>
+    <script src="../../../js/mol/mol.sandbox.js"></script>
+
+    <meta charset="utf-8" /> 
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
+    <style type="text/css"> 
+      html { height: 100% }
+      body { height: 100%; margin: 0px; padding: 0px }
+      #map { height: 100% }
+    </style> 
+    <!-- 
+       * Copyright (c) 2011 Map of Life
+       *
+       * Licensed under the Apache License, Version 2.0 (the "License");
+       * you may not use this file except in compliance with the License.
+       * You may obtain a copy of the License at
+       *
+       *     http://www.apache.org/licenses/LICENSE-2.0
+       *
+       * Unless required by applicable law or agreed to in writing, software
+       * distributed under the License is distributed on an "AS IS" BASIS,
+       * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+       * See the License for the specific language governing permissions and
+       * limitations under the License.
+      --> 
+    <meta name="description" content="Map of Life - Range Map." /> 
+    <meta name="keywords" content="map, map of life, biology, range map, expert map" /> 
+  </head>
+  <body>
+    <div id="content"></div>
+    <div id="map"></div>
+    <div id="tester"></div>
+	<script type="text/javascript">
+        $(document).ready(function() {   
+            MOL('ui', 'log', 'events', 'ajax', function(env) {
+                env.log.enabled = true;
+                var api = new env.ajax.Api();
+                var bus = new env.events.Bus();
+                var mapOptions = {
+                    zoom: 2,
+                    maxZoom: 15,
+                    mapTypeControlOptions: {position: google.maps.ControlPosition.BOTTOM_LEFT},
+                    center: new google.maps.LatLng(0,0),
+                    mapTypeId: google.maps.MapTypeId.TERRAIN
+                };
+                var map = new google.maps.Map($('#map')[0], mapOptions);
+                var mapControl = new env.ui.MapControl(api, bus, map);
+                console.log(mapControl);
+            });         
+        });
+    </script>
+  </body>  
 </html>
