--- a/app/html/mol.sandbox.html
+++ b/app/html/mol.sandbox.html
@@ -12,7 +12,7 @@
     <script src="../../../js/lib/jquery-1.5.1.min.js"></script> 
     <script src="../../../js/lib/jquery-ui-1.8.10.custom.min.js"></script> 
     <script src="../../../js/mol/class.js"></script>
-    <script src="../../../js/mol/mol.sandbox.js"></script>
+    <script src="../../../js/mol/mol.sandbox.js?4"></script>
 
     <meta charset="utf-8" /> 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
