--- a/app/html/map.html
+++ b/app/html/map.html
@@ -2,6 +2,7 @@
 <html>
   <head>    
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../../css/mol.css">
     <link rel="stylesheet" href="../../../css/info-controller.css">
     <link rel="stylesheet" href="../../../css/right-controller.css">
     <link rel="stylesheet" href="../../../css/layer.widget.css">
